# wust_vl

./: .clangd  CMakeLists.txt  env.bash  format.sh  rsync.sh  run.sh
cmake/: FindHikSDK.cmake  FindTensorRT.cmake  VersionConfig.h.in  WustVLConfig.cmake.in
core/common/: CMakeLists.txt
core/common/include/common/: adaptive_resource_pool.hpp  queues.hpp  stringanything.hpp
core/common/src/: common.cpp
core/ml_net/: CMakeLists.txt
core/ml_net/include/ml_net/onnxruntime/: onnxruntime_net.hpp
core/ml_net/include/ml_net/openvino/: openvino_net.hpp
core/ml_net/include/ml_net/tensorrt/: tensorrt_net.hpp
core/ml_net/src/ncnn/: ncnn_net.cpp
core/ml_net/src/onnxruntime/: onnxruntime_net.cpp
core/ml_net/src/openvino/: openvino_net.cpp
core/ml_net/src/tensorrt/: tensorrt_net.cpp
include/: wust_vl.hpp
include/algorithm/: algorithm.hpp  pnp_solver.hpp
include/algorithm/control/: pid.hpp  smc.hpp
include/common/: common.hpp
include/common/concurrency/: ThreadPool.h  adaptive_resource_pool.hpp  concurrency.hpp  monitored_thread.hpp  queues.hpp
include/common/drivers/: crc8_crc16.hpp  drivers.hpp  serial_driver.hpp
include/common/utils/: config_binder.hpp  labeler.hpp  logger.hpp  manual_compensator.hpp  math.hpp  motion_buffer.hpp  parameter.hpp  property_wrapper.hpp  recorder.hpp  signal.hpp  stringanything.hpp  timer.hpp  trajectory_compensator.hpp  type_utils.h  utils.hpp
include/common/utils/math/: geom_utils.hpp  pose_node.hpp  transform6D.hpp  type_utils.hpp
include/common/utils/math/geom/: geom_circle.hpp  geom_line.hpp  geom_segment.hpp
include/ml_net/: ml_net.hpp
include/ml_net/ncnn/: ncnn_net.hpp
include/ml_net/onnxruntime/: onnxruntime_net.hpp
include/ml_net/openvino/: openvino_net.hpp
include/ml_net/tensorrt/: tensorrt_net.hpp
include/video/: camera.hpp  hik.hpp  icamera.hpp  image.hpp  uvc.hpp  video_player.hpp
src/algorithm/: CMakeLists.txt  pnp_solver.cpp
src/common/: CMakeLists.txt  common.cpp
src/common/drivers/: crc8_crc16.cpp  recorder.cpp
src/common/utils/: labeler.cpp  manual_compensator.cpp  recorder.cpp  trajectory_compensator.cpp
src/ml_net/: CMakeLists.txt
src/ml_net/ncnn/: ncnn_net.cpp
src/ml_net/onnxruntime/: onnxruntime_net.cpp
src/ml_net/openvino/: openvino_net.cpp
src/ml_net/tensorrt/: tensorrt_net.cpp
src/video/: CMakeLists.txt  camera.cpp  hik.cpp  uvc.cpp  video_player.cpp
wust_vl_cuda/: CMakeLists.txt  cvtcolor.cu  cvtcolor.hpp
